kpt/eda-kpt-asset-host/host-artifacts/lighttpd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lighttpd
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app.kubernetes.io/instance: lighttpd
    app.kubernetes.io/name: lighttpd
    app.kubernetes.io/version: latest
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: lighttpd
      app.kubernetes.io/name: lighttpd
  replicas: 1
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: lighttpd
        app.kubernetes.io/name: lighttpd
        app.kubernetes.io/version: latest
    spec:
      volumes:
        - name: lighttpd-config-volume
          configMap:
            name: lighttpd-config
            defaultMode: 0777
        - name: lighttpd-storage
          persistentVolumeClaim:
            claimName: lighttpd-pvc
      containers:
        - name: lighttpd
          image: ghcr.io/nokia-eda/adm/lighthttpd:1.4.76
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - mountPath: "/var/www/html"
              name: lighttpd-storage
            - mountPath: "/etc/lighttpd/conf.d/15-dirlisting.conf"
              name: lighttpd-config-volume
              subPath: 15-dirlisting.conf
            - mountPath: "/etc/lighttpd/conf.d/15-webdav.conf"
              name: lighttpd-config-volume
              subPath: 15-webdav.conf
            - mountPath: "/etc/lighttpd/conf.d/15-listen-ipv6.conf"
              name: lighttpd-config-volume
              subPath: 15-listen-ipv6.conf
