kpt/eda-kpt-asset-host/host-artifacts/lighthttpd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lighttpd
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app.kubernetes.io/instance: lighttpd
    app.kubernetes.io/name: lighttpd
    app.kubernetes.io/version: latest
spec:
  type: ClusterIP
  sessionAffinity: None
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/instance: lighttpd
    app.kubernetes.io/name: lighttpd
