kpt/eda-kpt-asset-host/host-artifacts/lighthttpd-ingress-upload.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lighttpd-upload
  namespace: "eda-assets" # kpt-set: ${EDA_NAMESPACE_ASSET_HOST}
  labels:
    app.kubernetes.io/instance: lighttpd
    app.kubernetes.io/name: lighttpd
    app.kubernetes.io/version: latest
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: lighttpd-ingress-auth
spec:
  ingressClassName: "nginx"
  rules:
    - host: ""
      http:
        paths:
          - path: /artifacts-upload(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: lighttpd
                port:
                  name: http
